Add csrf check for set_activity

--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -21,6 +21,7 @@ Main menu
         <option value="thieve">Thieve</option>
     </select>
     <input type="submit" value="Set activity!">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 
 
